tests/ui/public_fragment_reintroduction.stderr
error[E0425]: cannot find type `Fragment` in module `hibana::integration::program`
 --> tests/ui/public_fragment_reintroduction.rs:2:64
  |
2 |     let _ = core::mem::size_of::<hibana::integration::program::Fragment<()>>();
  |                                                                ^^^^^^^^ not found in `hibana::integration::program`
