tests/ui/public_fragment_reintroduction.rs
fn main() {
    let _ = core::mem::size_of::<hibana::integration::program::Fragment<()>>();
}
